--- a/package.json
+++ b/package.json
@@ -4,28 +4,28 @@
   "description": "Serverless aws-nodejs-typescript template",
   "main": "serverless.ts",
   "scripts": {
-    "offline": "serverless offline",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "engines": {
     "node": ">=14.15.0"
   },
   "dependencies": {
     "@fastify/aws-lambda": "^3.3.0",
-    "@middy/core": "^3.4.0",
-    "@middy/http-json-body-parser": "^3.4.0",
     "fastify": "^4.18.0",
     "mongoose": "^7.3.1"
   },
   "devDependencies": {
     "@serverless/typescript": "^3.30.1",
     "@types/aws-lambda": "^8.10.71",
+    "@types/jest": "^29.5.2",
     "@types/node": "^14.14.25",
     "esbuild": "^0.14.11",
-    "json-schema-to-ts": "^1.5.0",
-    "serverless": "^3.0.0",
+    "jest": "^29.5.0",
+    "serverless": "^3.32.2",
+    "serverless-dotenv-plugin": "^6.0.0",
     "serverless-esbuild": "^1.23.3",
     "serverless-offline": "^12.0.4",
+    "ts-jest": "^29.1.0",
     "ts-node": "^10.4.0",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^4.1.3"
